<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/category_group">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/menu_menu" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_cart" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/signout_group">
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_signout"
            android:title="@string/menu_signout" />
    </group>
</menu>